	PR tree-optimization/71259 	* tree-vect-slp.c (vect_get_constant_vectors): For 	VECTOR_BOOLEAN_TYPE_P, return all ones constant instead of 	one for constant op, and use COND_EXPR for non-constant.

* gcc.dg/vect/pr71259.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@237147 138bc75d-0d04-0410-961f-82ee72b054a4